Bug 1782314 - When creating a new account using OAuth2 or Github, show warning text about emails being visible and other rules

--- a/extensions/BMO/web/styles/create_account.css
+++ b/extensions/BMO/web/styles/create_account.css
@@ -46,3 +46,7 @@
 #create-account-form tr:last-child {
   text-align: right;
 }
+
+#verify-auto-account-creation {
+  margin-bottom: 2em;
+}
